# githubactions

./: pyproject.toml
.github/workflows/: azure-pipeline.yaml
MLopsproject.egg-info/: SOURCES.txt  requires.txt
gitenv/: pyvenv.cfg
outputs/: fraud_detection.pkl
src/azuremlapp/: .env
src/azuremlapp/resources/: fraud_transactions.csv
src/azuremlapp/utils/: fraud_train.py
