[project]
name = "MLopsproject"
version = "0.1.0"
description = "CI/CD implementation and push into github"
requires-python = ">=3.10"
dependencies = [
     "azure.identity",
     "python-dotenv",
     "streamlit",
     "azure-ai-ml",
     "scikit-learn",
     "pandas",
     "uvicorn",
     "joblib"
]
[project.optional-dependencies]
nlp = ["nltk>=3.9", "gensim>=4.3"]
dev = [
    "pytest>=8.2",
    "black>=24.4",
    "ruff>=0.4",
    "mypy>=1.10",
]
 
[tool.ruff]
line-length = 100
target-version = "py310"
 
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
[tool.pytest.ini_options]
testpaths = ["tests"]
 